# ali_sdk

./: .config  .gitignore  CMakeLists.txt  M3801.md  README.md  export_mips.sh
docs/: addr.txt  org stack.txt
ld/: ali_m3801.ld  ali_m3801_ram.ld
notes/: irq.c
scripts/: cmd.py  console.py  extractor.py
sdk/include/: chip.h  fpu.h  gpio.h  mipsregs.h  print.h  regs.h  uart.h
sdk/src/: chip.c  entry.c  fpu.c  gpio.c  print.c  start.S  syscalls.c  uart.c
user/src/: main.c
